Remove dependancy on sun.misc.BASE64Decoder using commons-codec
Signed-off-by: Daniel Thomas <drt24@cam.ac.uk>